--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,9 @@ offline:
 ## Docs: http://zespia.tw/hexo/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:rpa-cn/rpa.git
+  repository: https://github.com/rpa-cn/rpa
+  name: wanghaisheng
+  email: edwin_uestc@163.com
 
 feed:
   type: atom
