--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -1,6 +1,6 @@
 site_description: "RPA - The Progressive JavaScript Framework"
-google_analytics: UA-46852172-1
-root_domain: vuejs.org
+google_analytics: UA-57883739-3
+root_domain: rpa.antivte.com
 vue_version: 2.5.16
 
 special_sponsors:
